--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
 
 env:
   VERSION: ${{ github.sha }}
-  DOCKER_IMAGE: ghcr.io/secon0101/nosookbot
+  DOCKER_IMAGE: ghcr.io/sennyru/nosookbot:latest
   NAME: nosookbot
 
 jobs:
@@ -47,7 +47,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: secon0101
+          username: ${{ github.repository_owner }}
           password: ${{ secrets.GHCR_TOKEN }}
       - name: Setting .env
         run: |
