뒤에 붙은 latest 제거

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
 
 env:
   VERSION: ${{ github.sha }}
-  DOCKER_IMAGE: ghcr.io/sennyru/nosookbot:latest
+  DOCKER_IMAGE: ghcr.io/sennyru/nosookbot
   NAME: nosookbot
 
 jobs:
