--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,30 +14,37 @@ jobs:
     name: Build
     runs-on: [ self-hosted, server ]
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+      
       - name: Set up docker buildx
         id: buildx
-        uses: docker/setup-buildx-action@v1
-      - name: Cache docker layers
-        uses: actions/cache@v3
+        uses: docker/setup-buildx-action@v3
         with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ env.VERSION }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
+          driver: docker
+      
+#      - name: Cache docker layers
+#        uses: actions/cache@v3
+#        with:
+#          path: /tmp/.buildx-cache
+#          key: ${{ runner.os }}-buildx-${{ env.VERSION }}
+#          restore-keys: |
+#            ${{ runner.os }}-buildx-
+      
       - name: Login to ghcr
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GHCR_TOKEN }}
+      
       - name: Build and push
         id: docker_build
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v5
         with:
           builder: ${{ steps.buildx.outputs.name }}
           push: true
           tags: ${{ env.DOCKER_IMAGE }}:latest
+  
   deploy:
     needs: build
     name: Deploy
@@ -49,15 +56,18 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GHCR_TOKEN }}
+      
       - name: Setting .env
         run: |
           echo "TOKEN=${{ secrets.BOT_TOKEN }}" >> .env
           echo "FIREBASE_ADMIN_BASE64=${{ secrets.FIREBASE_ADMIN_BASE64 }}" >> .env
           echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> .env
+      
       - name: Docker run
         run: |
           docker stop ${{ env.NAME }} && docker rm ${{ env.NAME }} && docker rmi ${{ env.DOCKER_IMAGE }}:latest
           docker run -d --env-file=.env --name ${{ env.NAME }} --restart always ${{ env.DOCKER_IMAGE }}:latest
+      
       - name: Remove .env file
         run: |
           rm -rf .env
